<resources>
    <string name="app_name">Hogwarts</string>
    <string name="houses">Houses</string>
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="reload">Reload</string>
    <string name="general_error">Something went wrong, tap to try again</string>
    <string name="born">Born</string>
    <string name="nationality">Nationality</string>
    <string name="gender">Gender</string>
    <string name="house">House</string>
    <string name="died">Died</string>
    <string name="back">back</string>
    <string name="search_hint">Search…</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_data_message">No data found,\nDo you want to try another magic?</string>
    <string name="blank_keyword_message">Do you have a wish?</string>
    <string name="loading">Loading…</string>
</resources>