<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/character_detail_image_background"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/character_detail_back_button_margin"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:padding="@dimen/character_detail_back_button_padding"
            android:src="@drawable/bg_back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_character_image"
            android:layout_width="@dimen/character_detail_image_width"
            android:layout_height="@dimen/character_detail_card_image_height"
            app:cardCornerRadius="@dimen/character_detail_card_image_corner_radius"
            app:cardElevation="@dimen/character_detail_card_image_elevation"
            app:layout_constraintBottom_toBottomOf="@+id/iv_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_background">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_character"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/character_detail_name_margin_top"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/character_detail_name_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_character_image" />

        <id.andiwijaya.hogwarts.presentation.component.HogwartsTitleValue
            android:id="@+id/htv_born"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/character_detail_content_margin_horizontal"
            android:layout_marginTop="@dimen/character_detail_content_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:title="@string/born" />

        <id.andiwijaya.hogwarts.presentation.component.HogwartsTitleValue
            android:id="@+id/htv_died"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/character_detail_content_margin_horizontal"
            android:layout_marginTop="@dimen/character_detail_content_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/htv_born"
            app:title="@string/died" />

        <id.andiwijaya.hogwarts.presentation.component.HogwartsTitleValue
            android:id="@+id/htv_nationality"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/character_detail_content_margin_horizontal"
            android:layout_marginTop="@dimen/character_detail_content_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/htv_died"
            app:title="@string/nationality" />

        <id.andiwijaya.hogwarts.presentation.component.HogwartsTitleValue
            android:id="@+id/htv_gender"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/character_detail_content_margin_horizontal"
            android:layout_marginTop="@dimen/character_detail_content_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/htv_nationality"
            app:title="@string/gender" />

        <id.andiwijaya.hogwarts.presentation.component.HogwartsTitleValue
            android:id="@+id/htv_house"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/character_detail_content_margin_horizontal"
            android:layout_marginTop="@dimen/character_detail_content_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/htv_gender"
            app:title="@string/house" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>